--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "mongoose": "^5.3.4"
+    "mathjs": "^5.4.0",
+    "mongoose": "^5.3.4",
+    "util": "^0.11.1"
   }
 }
